rgb fade working

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,16 @@ platform = espressif32
 framework = espidf
 monitor_speed = 115200
 monitor_raw = true
+build_flags =
+    -Wall
+    -Werror
 
 [env:m5stack-stamps3]
 board = m5stack-stamps3
+build_flags =
+    -DGPIO_LED=21
 
 [env:esp32-s3-devkitc-1]
 board = esp32-s3-devkitc-1
+build_flags =
+    -DGPIO_LED=48
