support atom matrix

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,12 +16,18 @@ monitor_raw = true
 
 [env:m5stack-stamps3]
 board = m5stack-stamps3
-build_flags =
+build_flags = -Wall -Werror
+    -DLED_COUNT=1
     -DGPIO_LED=21
 
 [env:esp32-s3-devkitc-1]
 board = esp32-s3-devkitc-1
-build_flags =
-    -Wall
-    -Werror
+build_flags = -Wall -Werror
+    -DLED_COUNT=1
     -DGPIO_LED=48
+
+[env:m5stack-atom]
+board = m5stack-atom
+build_flags = 
+    -DLED_COUNT=25
+    -DGPIO_LED=27
