--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "strstream": "cpp",
+        "chrono": "cpp",
+        "cstring": "cpp"
     }
 }
